2003-07-04  Corinna Vinschen  <corinna@vinschen.de>

	* mmap.cc (fhandler_disk_file::mmap): Fix address test.

2003-07-03  Christopher Faylor  <cgf@redhat.com>

	* path.cc (fillout_mntent): Change "posix" to "managed".

2003-07-02  Christopher Faylor  <cgf@redhat.com>

	* fhandler.h (FH_ENC): New enum.
	(fhandler_base::get_encoded): New function.
	(fhandler_base::set_encoded): Ditto.
	* fhandler_disk_file.cc (fhandler_disk_file::opendir): Set encoded flag
	in fhandler, as appropriate.
	(fhandler_disk_file::readdir): Unmunge filename as appropriate based on
	new encoding flag.
	* path.cc (normalize_posix_path): Don't punt on files with colons.
	(special_char): New function.
	(mount_item::fnmunge): Ditto.
	(fnunmunge): Ditto.
	(special_name): Ditto.
	(mount_item::build_win32): Avoid drive considerations when file is
	encoded.
	(mount_info::conv_to_win32_path): Handle encoded filenames.
	(mount_info::conv_to_posix_path): Ditto.
	(fillout_mntent): Add posix string when directory is encoded.
	* path.h (fnunmunge): Declare.
	(path_conv::is_encoded): Declare.

2003-07-03  Christopher Faylor  <cgf@redhat.com>

	* fhandler_tty.cc (fhandler_tty_slave::open): Conditionalize a little
	more of the cygserver stuff so that ttys actually work.

2003-07-03  Corinna Vinschen  <corinna@vinschen.de>

	* mmap.cc (mmap64): Allow MAP_FIXED with pagesize granularity (4K).
	If a non-zero addr is given, align it to the next lower 64K boundary.
	(fhandler_disk_file::mmap): If a non-zero address is given, try
	mapping using the given address first.  If it fails and flags is not
	MAP_FIXED, try again with NULL address.

2003-07-01  Christopher Faylor  <cgf@redhat.com>

	* thread.cc: Remove _MT_SAFE conditional.

2003-07-01  Christopher Faylor  <cgf@redhat.com>

	* configure.in: Fix --enable-server option.
	* configure: Regenerate.

2003-07-01  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in: Remove cygserver stuff.
	* acconfig.h: Add USE_CYGSERVER define.
	* config.h.in: Regenerate.